# asmdetect

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run.sh  setup.sh  watcher.py
asmdetect/: __init__.py  cli.py  detector.py  preprocessing.py  result.py
asmdetect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: basic_usage.py
notebooks/: malware-detect.ipynb
scripts/: batch_triage.py  optimize.py  predict_from_hf.py  verify_security.py
tests/: test_asmdetect.py
