[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "asmdetect"
version     = "1.0.0"
description = "Assembly-level malware detection using fine-tuned CodeBERT"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"
authors     = [{ name = "Swarnadharshini" }]

keywords = [
    "malware-detection", "assembly", "opcodes", "x86",
    "codebert", "cybersecurity", "static-analysis", "nlp", "transformers"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
train = [
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
asmdetect = "asmdetect.cli:main"

[project.urls]
Homepage        = "https://huggingface.co/Swarnadharshini/codebert-malware-detector"
"HuggingFace"   = "https://huggingface.co/Swarnadharshini/codebert-malware-detector"
"Source Code"   = "https://github.com/Swarnadharshini/asmdetect"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length    = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile     = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
